<resources>
    <string name="app_name">Atrakcje Kotliny Kłodzkiej</string>
    <string name="hint">Znajdź...</string>
    <string name="attr_name_label">Nazwa: </string>
    <string name="attr_address_label">Adres: </string>
    <string name="attr_dscr_label">Opis: </string>
    <string name="attr_dst_label">Odległość: </string>
    <string name="btn_map">Pokaż na mapie</string>
    <string name="btn_web">Pokaż stronę Web</string>

    <string name="order_name_asc">Sortuj po nazwie rosnąco</string>
    <string name="order_name_dsc">Sortuj po nazwie malejąco</string>
    <string name="order_distance_asc">Sortuj po odległości rosnąco</string>
    <string name="order_distance_dsc">Sortuj po odległości malejąco</string>

    <string name="btn_no_connection">Spróbuj ponownie</string>
    <string name="no_connection_text">Wymagane połączenie</string>

</resources>
